5890a33 chore(translations): sync Spanish translations from transifex (v32)

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -117,7 +117,7 @@ layer_stack_transparency=Transparencia
 legend_name=Nombre de leyenda
 legend_name_is_required=Nombre de leyenda requerido
 legends=Leyendas
-legendset=Legend set
+legendset=Leyenda
 legend_sets_available=set de leyendas disponible
 legend_set_name=Nombre de Set de Leyenda
 legendsets=Sets de Leyendas
@@ -160,7 +160,7 @@ open_this_map_as_table=Abrir este mapa como una tabla
 options=Opciones
 organisation_unit=Unidad organizativa
 organisation_unit_group_icons=Iconos del grupo de unidad organizativa
-organisationunit_groupset=Organisation unit group set
+organisationunit_groupset=Mostrar set de grupos de unidad organizativa
 organisation_units=Unidades orgenizativas
 organisationunit_search=Buscar unidad organizativa
 osm_light=OSM Sencillo
@@ -181,7 +181,7 @@ population_density=Densidad de población
 precipitation=Precipitación
 predefined=Predefinido
 previous=Anterior
-program=Program
+program=Programa
 program_indicators=Indicadores de programa
 public_access=Acceso público
 quarterly=Trimestral
