6d93c83 chore(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_lo.properties
+++ b/i18n/i18n_app_lo.properties
@@ -131,7 +131,7 @@ manage_favorites=\u0e88\u0eb1\u0e94\u0e81\u0eb2\u0e99\u0e82\u0ecd\u0ec9\u0ea1\u0
 map=\u0ec1\u0e9c\u0e99\u0e97\u0eb5\u0ec8
 max=\u0e84\u0ec8\u0eb2\u0eaa\u0eb9\u0e87\u0eaa\u0eb8\u0e94
 min=\u0e84\u0ec8\u0eb2\u0e95\u0ecd\u0ec8\u0eb2\u0eaa\u0eb8\u0e94
-min_max_c=Min/max °C
+min_max_c=Min/max \u00c2\u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
