--- a/i18n/i18n_app_my.properties
+++ b/i18n/i18n_app_my.properties
@@ -131,7 +131,7 @@ manage_favorites=favorites \u1005\u102e\u1005\u1009\u103a\u1015\u102b\u104b
 map=Map
 max=\u1021\u1019\u103b\u102c\u1038\u1006\u102f\u1036\u1038
 min=\u1021\u1014\u100a\u103a\u1038\u1006\u102f\u1036\u1038
-min_max_c=Min/max °C
+min_max_c=Min/max \u00c2\u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
