--- a/i18n/i18n_app_tet.properties
+++ b/i18n/i18n_app_tet.properties
@@ -1,4 +1,4 @@
-about=Konabá
+about=Konab\u00e1
 add_legend=Add legend
 add_new=Aumenta foun
 address=Enderesu
@@ -8,19 +8,19 @@ allow_external_access=Permite asesu externu
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
-average=Média
+average=M\u00e9dia
 bimonthly=Bimensal
 boundary_layer=Boundary layer
 by_data_element=Tuir elementu dadus
 cancel=Kansela
-can_edit_and_view=Bele edita i haré
-can_view=Bele haré
-chart=Gráfiku
+can_edit_and_view=Bele edita i har\u00e9
+can_view=Bele har\u00e9
+chart=Gr\u00e1fiku
 classes_method=Classes / method
-clear=Hamós
+clear=Ham\u00f3s
 clear_map=Clear map
 clustering=Clustering
-code=Kódigu
+code=K\u00f3digu
 color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
@@ -29,7 +29,7 @@ count=Konta
 create=Kria
 created_by=Kria husi
 current_legends=Current legends
-daily=Diáriu
+daily=Di\u00e1riu
 data=Dadus
 data_and_periods=Data and periods
 dataelement=Elementu dadus
@@ -73,8 +73,8 @@ financial_july=Jullu finanseiru
 financial_oct=Outubru finanseiru
 google_hybrid=Google Hybrid
 google_streets=Google Streets
-go_to_charts=Bá gráfikus
-go_to_pivot_tables=Bá tabela dinámika
+go_to_charts=B\u00e1 gr\u00e1fikus
+go_to_pivot_tables=B\u00e1 tabela din\u00e1mika
 greater_than=Greater than
 group=Group
 group_nearby_events=Group nearby events
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Pájina inisial
+home=P\u00e1jina inisial
 indicator=Indikador
 indicator_group=Indicator group
 information=Information
@@ -92,7 +92,7 @@ infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Fulan-nén 2 ikus
+last_2_sixmonths=Fulan-n\u00e9n 2 ikus
 last_3_months=Fulan 3 ikus
 last_4_quarters=Trimestre 4 ikus liu
 last_4_weeks=Semana 4 ikus
@@ -106,7 +106,7 @@ last_bimonth=Bimensal kotuk
 last_financial_year=Tinan finanseiru kotuk
 last_month=Fulan kotuk
 last_quarter=Trimestre kotuk
-last_sixmonth=Fulan-nén ikus
+last_sixmonth=Fulan-n\u00e9n ikus
 last_week=Semana kotuk
 last_5_years=Tinan 5 kotuk
 last_year=Tinan kotuk
@@ -131,14 +131,14 @@ manage_favorites=Jere favoritus
 map=Mapa
 max=Max
 min=Min
-min_max_c=Min/max Â°C
+min_max_c=Min/max \u00c2\u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Mensal
 name=Naran
-next=Próximu
+next=Pr\u00f3ximu
 nighttime_lights=Nighttime lights
 no=Lae
 no_groupset_selected=No group set selected
@@ -152,7 +152,7 @@ no_program_stage_selected=No program stage selected
 no_selected_items=No selected items
 no_system_info_found=No system info found
 no_valid_coordinates_found=No valid coordinates found
-open_last_chart=Loke gráfiku ikus
+open_last_chart=Loke gr\u00e1fiku ikus
 open_last_table=Loke tabela ikus
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
@@ -168,7 +168,7 @@ overwrite=Hakerek sae leten
 overwrite_favorite=Hakerek sae favoritu nia leten
 page=Page
 parent_unit=Parent unit
-period=Períodu
+period=Per\u00edodu
 period_type=Period type
 phone_number=Phone number
 placement=Placement
@@ -183,14 +183,14 @@ predefined=Predefined
 previous=Anterior
 program=Program
 program_indicators=Program indicators
-public_access=Asesu públiku
+public_access=Asesu p\u00fabliku
 quarterly=Trimestral
 relative=Relativu
 relocate=Relocate
 relocate_facility=Relocate facility
 remove=Hasai
 rename=Tau naran foun
-reporting_rates=Taxas relatóriu
+reporting_rates=Taxas relat\u00f3riu
 revision=Revision
 search=Search
 search_for_favorites=Buka favoritus
@@ -203,9 +203,9 @@ select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Select levels
 select_organisation_unit_groups=Hili grupus unidades organizasionais
-select_organisation_unit_levels=Hili níveis unidades organizasionais
+select_organisation_unit_levels=Hili n\u00edveis unidades organizasionais
 select_organisation_units=Hili unidades organizasionais
-select_period=Hili períodu
+select_period=Hili per\u00edodu
 select_program=Select program
 select_service=Select service
 select_stage=Select stage
@@ -222,7 +222,7 @@ show_lon_lat=Show longitude/latitude
 sixmonthly=Semestral
 sixmonthly_april=Abril semestral
 stage=Stage
-start_date=Data hahú
+start_date=Data hah\u00fa
 start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=Dezviu padraun
