--- a/i18n/i18n_app_uk.properties
+++ b/i18n/i18n_app_uk.properties
@@ -131,7 +131,7 @@ manage_favorites=\u041a\u0435\u0440\u0443\u0432\u0430\u0442\u0438 \u0432\u0438\u
 map=\u041c\u0430\u043f\u0430
 max=\u041c\u0430\u043a\u0441
 min=\u041c\u0456\u043d
-min_max_c=Min/max °C
+min_max_c=Min/max \u00c2\u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
@@ -257,7 +257,7 @@ user_is_not_assigned_to_any_organisation_units=User is not assigned to any organ
 user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=\u041e\u0434\u0438\u043d\u0438\u0446\u0456 \u043f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0456\u0432 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
-user_sub_x2_units=User sub-x2-units
+user_sub_x2_units=\u041f\u0456\u0434\u0440\u043e\u0437\u0434\u0456\u043b\u0438 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432 \u0434\u0440\u0443\u0433\u043e\u0433\u043e \u0440\u0456\u0432\u043d\u044f
 value=\u0417\u043d\u0430\u0447\u0435\u043d\u043d\u044f
 value_type=\u0422\u0438\u043f \u0437\u043d\u0430\u0447\u0435\u043d\u043d\u044f
 variance=\u041a\u043e\u043b\u0438\u0432\u0430\u043d\u043d\u044f (\u0432\u0430\u0440\u0456\u0430\u0442\u0438\u0432\u043d\u0456\u0441\u0442\u044c)
