--- a/i18n/i18n_app_tg.properties
+++ b/i18n/i18n_app_tg.properties
@@ -131,7 +131,7 @@ manage_favorites=\u0418\u0434\u043e\u0440\u0430\u043a\u0443\u043d\u0438\u0438 \u
 map=\u0425\u0430\u0440\u0438\u0442\u0430\u04b3\u043e
 max=\u041c\u0430\u043a\u0441
 min=\u041c\u0438\u043d
-min_max_c=Min/max °C
+min_max_c=Min/max \u00c2\u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
