--- a/i18n/i18n_app_zh_CN.properties
+++ b/i18n/i18n_app_zh_CN.properties
@@ -1,43 +1,43 @@
-about=\u17a2\u17c6\u1796\u17b8
+about=\u5173\u4e8e
 add_legend=Add legend
-add_new=\u1794\u1793\u17d2\u1790\u17c2\u1798\u200b\u1790\u17d2\u1798\u17b8\u200b
-address=\u17a2\u17b6\u179f\u1799\u178a\u17d2\u178b\u17b6\u1793
+add_new=\u65b0\u52a0
+address=Address
 add_to_dashboard=Add to dashboard
 aggregation_type=Aggregation type
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
-automatic=Automatic
-average=\u1795\u179b\u1798\u1792\u17d2\u1799\u1798
-bimonthly=\u179a\u17b6\u179b\u17cb\u1796\u17b8\u179a\u179f\u1794\u17d2\u178f\u17b6\u17a0\u17cd
+automatic=\u81ea\u52a8
+average=Average
+bimonthly=Bi-monthly
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=\u1794\u17c4\u17c7\u1794\u1784\u17cb
+cancel=\u53d6\u6d88
 can_edit_and_view=Can edit and view
 can_view=Can view
 chart=Chart
 classes_method=Classes / method
-clear=\u179b\u17bb\u1794\u1785\u17c4\u179b
+clear=\u6e05\u9664
 clear_map=Clear map
 clustering=Clustering
-code=Code
+code=\u4ee3\u7801
 color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=\u1795\u179b\u179a\u17b6\u1794\u17cb
-create=Create
+count=Count
+create=\u521b\u5efa
 created_by=Created by
 current_legends=Current legends
-daily=\u179a\u17b6\u179b\u17cb\u200b\u1790\u17d2\u1784\u17c3
+daily=\u6bcf\u5929
 data=Data
 data_and_periods=Data and periods
-dataelement=Data element
+dataelement=\u6570\u636e\u5143
 dataelement_group=Data element group
 dataset=Data set
-delete=\u200b\u179b\u17bb\u1794\u200b
+delete=\u5220\u9664
 delete_favorite=Delete favorite
-details=\u179b\u1798\u17d2\u17a2\u17b7\u178f
+details=\u8be6\u60c5
 download=Download
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
@@ -48,8 +48,8 @@ earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
 edit_layer=Edit layer
 edit_legend=Edit legend
-email=Email
-end_date=\u1780\u17b6\u179b\u200b\u1794\u179a\u17b7\u1785\u17d2\u1786\u17c1\u1791\u200b\u1794\u1789\u17d2\u1785\u1794\u17cb\u200b
+email=\u7535\u90ae
+end_date=\u7ed3\u675f\u65e5\u671f
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=Equal intervals
@@ -66,7 +66,7 @@ facility_layer_legend=Facility layer legend
 favorite_name=Favorite name
 favorite_outdated_create_new=Favorite is outdated - please create a new one
 favorites=Favorites
-filter=Filter
+filter=\u8fc7\u6ee4\u5668
 filter_by_value=Filter by value
 financial_april=Financial year (Start April)
 financial_july=Financial year (Start July)
@@ -75,7 +75,7 @@ google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
+greater_than=\u5927\u4e8e
 group=Group
 group_nearby_events=Group nearby events
 groups=Groups
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
+home=\u9996\u9875
 indicator=Indicator
 indicator_group=Indicator group
 information=Information
@@ -104,13 +104,13 @@ last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
-last_month=Last month
+last_month=\u4e0a\u6708
 last_quarter=Last quarter
 last_sixmonth=Last six-month
-last_week=Last week
-last_5_years=Last 5 years
+last_week=\u4e0a\u5468
+last_5_years=\u6700\u8fd1\u4e94\u5e74
 last_year=Last year
-latitude=\u179a\u1799\u17c8\u1791\u1791\u17b9\u1784
+latitude=\u7ef4\u5ea6
 layer=Layer
 layers=Layers
 layer_stack_transparency=Layer stack / opacity
@@ -123,27 +123,27 @@ legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
-level=Level
-longitude=\u179a\u1799\u17c8\u1794\u178e\u17d2\u178f\u17c4\u1799
+level=\u7b49\u7ea7
+longitude=\u7ecf\u5ea6
 low_color_size=Low color / size
 low_size=Low size
 manage_favorites=Manage favorites
 map=Map
-max=\u17a2\u178f\u17b7\u1794\u179a\u1798\u17b6
-min=\u17a2\u1794\u17d2\u1794\u1794\u179a\u1798\u17b6
+max=\u6700\u5927
+min=Min
 min_max_c=Min/max \u00c2\u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
-monthly=Monthly
-name=\u1788\u17d2\u1798\u17c4\u17c7
-next=\u1794\u1793\u17d2\u1791\u17b6\u1794\u17cb
+monthly=\u6bcf\u6708
+name=\u540d\u79f0
+next=\u4e0b\u4e00\u4e2a
 nighttime_lights=Nighttime lights
-no=\u1791\u17c1
+no=No
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
-none=\u1782\u17d2\u1798\u17b6\u1793
+none=\u6ca1\u6709
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
@@ -158,7 +158,7 @@ openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
 options=Options
-organisation_unit=\u1795\u17d2\u1793\u17c2\u1780\u200b\u1793\u17c3\u200b\u17a2\u1784\u17d2\u1782\u1780\u17b6\u179a
+organisation_unit=\u673a\u6784
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
 organisation_units=Organisation units
@@ -166,11 +166,11 @@ organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
-page=Page
+page=\u9875
 parent_unit=Parent unit
-period=\u1780\u17c6\u17a1\u17bb\u1784\u1796\u17c1\u179b
+period=\u671f\u95f4
 period_type=Period type
-phone_number=Phone number
+phone_number=\u7535\u8bdd\u53f7\u7801
 placement=Placement
 please_create_map_first=Please create a map first
 please_enter_a_name=Please enter a name
@@ -180,22 +180,22 @@ point_radius=Point radius
 population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
-previous=\u1798\u17bb\u1793
-program=Program
+previous=\u524d\u4e00
+program=\u9879\u76ee
 program_indicators=Program indicators
 public_access=Public access
-quarterly=Quarterly
-relative=\u1791\u17c6\u1793\u17b6\u1780\u17cb\u1791\u17c6\u1793\u1784
+quarterly=\u5b63\u5ea6
+relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=\u1799\u1780\u1785\u17c1\u1789
-rename=\u1794\u17d2\u178a\u17bc\u179a\u200b\u1788\u17d2\u1798\u17c4\u17c7
+remove=\u79fb\u9664
+rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
-search=\u179f\u17d2\u179c\u17c2\u1784\u179a\u1780
+search=\u641c\u7d22
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
-select=\u1787\u17d2\u179a\u17be\u179f\u200b\u179a\u17be\u179f
+select=\u9009\u62e9
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -205,35 +205,35 @@ select_levels=Select levels
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
-select_period=\u1787\u17d2\u179a\u17be\u179f\u179a\u17be\u179f\u1780\u17c6\u17a1\u17bb\u1784\u1796\u17c1\u179b
+select_period=Select period
 select_program=Select program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
 select_year=Select year
 service_url=Service URL
-share=\u1785\u17c2\u1780\u179a\u17c6\u179b\u17c2\u1780
+share=\u5171\u4eab
 share_with_other_people=Share with others
 sharing_settings=Sharing settings
-show=Show
+show=\u663e\u793a
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=\u179a\u17b6\u179b\u17cb\u1786\u1798\u17b6\u179f
-sixmonthly_april=\u1794\u17d2\u179a\u1785\u17b6\u17c6\u1786\u1798\u17b6\u179f\u200b\u1796\u17b8\u1781\u17c2\u1798\u17c1\u179f\u17b6
+sixmonthly=Six-monthly
+sixmonthly_april=Six-monthly April
 stage=Stage
-start_date=\u1780\u17b6\u179b\u1794\u179a\u17b7\u1785\u17d2\u1786\u17c1\u1791\u200b\u1785\u17b6\u1794\u17cb\u1795\u17d2\u178a\u17be\u1798\u200b
+start_date=\u5f00\u59cb\u65e5\u671f
 start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=Standard deviation
 steps=Steps
-style=\u200b\u179a\u1785\u1793\u17b6\u1794\u1791
+style=\u98ce\u683c
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
-sum=\u1795\u179b\u200b\u1794\u17bc\u1780
+sum=Sum
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
-table=Table
+table=\u8868
 temperature=Temperature
 text_filter=Text filter
 thematic_layer=Thematic layer
@@ -241,37 +241,37 @@ thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
-this_bimonth=This bi-month
+this_bimonth=\u672c\u4e24\u6708
 this_financial_year=This financial year
-this_month=This month
-this_quarter=This quarter
-this_sixmonth=This six-month
-this_week=This week
+this_month=\u672c\u6708
+this_quarter=\u672c\u5b63
+this_sixmonth=\u672c\u534a\u5e74
+this_week=\u672c\u5468
 this_year=This year
 time_since_last_data_update=Elapsed time since last data update
-today=Today
+today=\u4eca\u5929
 totals=Totals
-update=\u1792\u17d2\u179c\u17be\u200b\u1794\u1785\u17d2\u1785\u17bb\u1794\u17d2\u1794\u1793\u17d2\u1793\u1797\u17b6\u1796
-username=\u1788\u17d2\u1798\u17c4\u17c7\u200b\u1782\u178e\u1793\u17b8
+update=\u66f4\u65b0
+username=\u7528\u6237\u540d
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
-value=\u178f\u1798\u17d2\u179b\u17c3
-value_type=Value Type
+value=\u503c
+value_type=Value type
 variance=Variance
-version=\u1780\u17c6\u178e\u17c2
-weekly=\u179a\u17b6\u179b\u17cb\u200b\u179f\u1794\u17d2\u178a\u17b6\u17a0\u17cd
+version=\u7248\u672c
+weekly=\u6bcf\u5468
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
-yearly=Yearly
-yes=\u1794\u17b6\u1791/\u1785\u17b6\u179f
-yesterday=Yesterday
+yearly=\u6bcf\u5e74
+yes=Yes
+yesterday=\u6628\u5929
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
